content of css styles

--- a/index.html
+++ b/index.html
@@ -3,9 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <title>Nimal Motors - Garage Management</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <b>Hello world</b>
+
+    <!-- Header Section -->
+    <header>
+        <div class="logo">Nimal Motors</div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#packages">Packages</a></li>
+                <li><a href="#sections">Sections</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Home Section (Animations/Images) -->
+    <section id="home">
+        <div class="hero">
+            <h1>Welcome to Nimal Motors</h1>
+            <p>Your Trusted Garage for Quality Repairs & Maintenance</p>
+            <img src="assets/images/garage.jpg" alt="Garage Image">
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are a professional motor garage providing high-quality services for all types of vehicles.</p>
+    </section>
+
+    
+
+    <!-- Services Section -->
+    <section id="sections">
+        <h2>Our Services</h2>
+        <p>We offer vehicle repairs, maintenance, and inspection services with expert technicians.</p>
+    </section>
+
+    <!-- Inventory Section -->
+    <section id="inventory">
+        <h2>Inventory Management</h2>
+        <p>Check available spare parts and stock status in real time.</p>
+    </section>
+
+    <!-- Our Experts Section -->
+    <section id="experts">
+        <h2>Meet Our Experts</h2>
+        <p>Our team of skilled professionals is ready to serve you with the best repair solutions.</p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Get in touch with us for inquiries or appointments.</p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Nimal Motors. All Rights Reserved.</p>
+    </footer>
+
+    <script src="index.js"></script>
 </body>
 </html>
