Create About Us page

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <div class="header-container">
         <!-- Logo -->
         <div class="logo">
-            <img src="logo.jpg" alt="Garage Logo">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\logo.jpg" alt="Garage Logo">
         </div>
 
         <!-- Navigation Bar -->
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Packages</a></li>
-                <li><a href="#">Sections</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li> <!-- Redirects to about.html -->
+                <li><a href="packages.html">Packages</a></li> <!-- Redirects to packages.html -->
+                <li><a href="index.html#sections">Sections</a></li> <!-- Stays on Home Page -->
+                <li><a href="index.html#contact">Contact</a></li> <!-- Stays on Home Page -->
             </ul>
         </nav>
 
@@ -44,13 +44,13 @@
 <section class="slideshow">
     <div class="slideshow-container">
         <div class="slide fade">
-            <img src="garage1.jpg" alt="Garage Image 1">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\garage1.jpg" alt="Garage Image 1">
         </div>
         <div class="slide fade">
-            <img src="garage2.jpg" alt="Garage Image 2">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\garage2.jpg" alt="Garage Image 2">
         </div>
         <div class="slide fade">
-            <img src="garage3.jpg" alt="Garage Image 3">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\garage3.jpg" alt="Garage Image 3">
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -61,22 +61,22 @@
     <h2>Our Sections</h2>
     <div class="sections-container">
         <div class="section-card">
-            <img src="mechanical.jpg" alt="Mechanical Section">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\mechanical.jpg" alt="Mechanical Section">
             <h3>Mechanical Section</h3>
             <button class="details-btn">View Details</button>
         </div>
         <div class="section-card">
-            <img src="bodyshop.jpg" alt="Bodyshop Section">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\bodyshop.jpg" alt="Bodyshop Section">
             <h3>Bodyshop Section</h3>
             <button class="details-btn">View Details</button>
         </div>
         <div class="section-card">
-            <img src="electrical.jpg" alt="Electrical Section">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\electrical.jpg" alt="Electrical Section">
             <h3>Electrical Section</h3>
             <button class="details-btn">View Details</button>
         </div>
         <div class="section-card">
-            <img src="service.jpg" alt="Vehicle Service Section">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\service.jpg" alt="Vehicle Service Section">
             <h3>Vehicle Service Section</h3>
             <button class="details-btn">View Details</button>
         </div>
@@ -87,7 +87,7 @@
     <h2>Our Experts</h2>
     <div class="experts-container">
         <div class="expert-card">
-            <img src="sup1.jpg" alt="Supervisor 1">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\sup1.jpg" alt="Supervisor 1">
             <h3>John Doe</h3>
             <div class="contact-icons">
                 <a href="#"><i class="fas fa-phone"></i></a>
@@ -95,7 +95,7 @@
             </div>
         </div>
         <div class="expert-card">
-            <img src="sup2.jpg" alt="Supervisor 2">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\sup2.jpg" alt="Supervisor 2">
             <h3>Jane Smith</h3>
             <div class="contact-icons">
                 <a href="#"><i class="fas fa-phone"></i></a>
@@ -103,7 +103,7 @@
             </div>
         </div>
         <div class="expert-card">
-            <img src="sup3.jpg" alt="Supervisor 3">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\sup3.jpg" alt="Supervisor 3">
             <h3>Michael Brown</h3>
             <div class="contact-icons">
                 <a href="#"><i class="fas fa-phone"></i></a>
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="expert-card">
-            <img src="sup4.jpg" alt="Supervisor 4">
+            <img src="E:\Motor-Workshop-Mangement-System---Prototype-\Images\sup4.jpg" alt="Supervisor 4">
             <h3>Emily White</h3>
             <div class="contact-icons">
                 <a href="#"><i class="fas fa-phone"></i></a>
@@ -139,7 +139,7 @@
         <div class="footer-section">
             <h3>Contact</h3>
             <p><i class="fas fa-phone"></i> +94 71 728 6020</p>
-            <p><i class="fas fa-envelope"></i>heshandinuka.hd@gmail.com </p>
+            <p><i class="fas fa-envelope"></i> heshandinuka.hd@gmail.com </p>
         </div>
 
         <div class="footer-section">
