Create packages page

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
 </section>
 <footer>
-    <div class="footer-container">
+    <div class="footer-container" id = "contact">
         <div class="footer-section">
             <h3>Opening Hours</h3>
             <p>Monday - Friday: 8:00 AM - 6:00 PM</p>
@@ -164,13 +164,6 @@
     </div>
 </footer>
 
-
-
-   
-    
-    
-
-   
 
 
     <!-- Footer -->
