--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nimal Motors - Garage Management</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="appointment.js"></script>
 </head>
 <body>
 
@@ -23,7 +24,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li> <!-- Redirects to about.html -->
-                <li><a href="packages.html">Packages</a></li> <!-- Redirects to packages.html -->
+                <li><a href="package.html">Packages</a></li> <!-- Redirects to packages.html -->
                 <li><a href="index.html#sections">Sections</a></li> <!-- Stays on Home Page -->
                 <li><a href="index.html#contact">Contact</a></li> <!-- Stays on Home Page -->
             </ul>
@@ -31,7 +32,8 @@
 
         <!-- Right Section (Book Now & User Account) -->
         <div class="right-section">
-            <button class="book-now">Book Now</button>
+            <button id="bookNowBtn" class="book-now">Book Now</button>
+
             
         </div>
 <div class="user-account">
@@ -120,6 +122,7 @@
         </div>
     </div>
 </section>
+
 <footer>
     <div class="footer-container" id = "contact">
         <div class="footer-section">
@@ -136,7 +139,7 @@
             <p>Aluthgama 12080, Sri Lanka,</p>
         </div>
 
-        <div class="footer-section">
+        <div class="footer-section" id = "contact">
             <h3>Contact</h3>
             <p><i class="fas fa-phone"></i> +94 71 728 6020</p>
             <p><i class="fas fa-envelope"></i> heshandinuka.hd@gmail.com </p>
